[package]
name = "ethereum_event_listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.17.0"
chrono = "0.4"
tokio = { version= "1", features = ["full"] }
dotenv = "0.15.0"
aws-config = "1.1.4"
aws-sdk-s3 = "1.14.0"
clap = { version = "~4.4", features = ["derive"] }
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }