[package]
name = "ethereum_event_listener"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version= "1", features = ["full"] }
aws-config = "1.1.4"
aws-sdk-s3 = "1.14.0"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
dotenv = "0.15.0"
web3 = "0.17.0"
chrono = "0.4"
serde_json = "1.0.113"