[package]
name = "s_3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version= "1", features = ["full"] }
aws-config = "1.1.4"
aws-sdk-s3 = "1.14.0"
clap = { version = "~4.4", features = ["derive"] }
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
dotenv = "0.15.0"
